added Blog title

--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,7 @@
 
         <!-- Main Section -->
         <section class="mt-5">
+            <h1 class="text-center text-2xl font-bold">Blog</h1>
             <div class="rounded-lg px-6 py-5 shadow-xl space-y-3 mt-5">
                 <h1 class="border-b-2 border-dashed border-zinc-200 text-xl font-bold pb-2">Question-1: What are the different ways to select an element in the DOM?</h1>
                 <p>Answer: There are five ways to select an element in the DOM. If I give a Example How can we select a element in five differnt ways. 
