fixed few minor design

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             </div>
                             <div>
                                 <h1>Tasked Assign</h1>
-                                <h1 id="assign-task">6</h1>
+                                <h1 id="assign-task" class="font-bold">6</h1>
                             </div>
                         </div>
 
