--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="grid grid-cols-10 gap-3">
                 <div class="col-span-8 gap-4 bg-white p-3 rounded-xl">
                     <!-- left side er div -->
-                    <div class="grid grid-cols-4 gap-2 ">
+                    <div class="grid grid-cols-4 gap-2 border-b-2 border-dashed pb-5">
                         <div class="flex items-center gap-3 shadow-md px-3 py-4 justify-center rounded-xl bg-white">
                             <div>
                                 <i class="ri-checkbox-fill text-4xl text-blue-500"></i>
